--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
 
   <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="icon.png" type="image/x-icon">
 
   <title>nDonde - Políticas de privacidad</title>
 
